--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.3.0", features = ["derive"] }
 image = "0.24.6"
+serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
